syntax = "proto3";
option java_multiple_files = true;
package com.example.systemevents;

message SystemEventRequest {
    string time = 1;
    string serviceName = 2;
    string user = 3;
    string eventName = 4;
    string eventType = 5;
}

message SystemEventResponse {
    string eventId = 1;
}

service SystemEventService {
    rpc register(SystemEventRequest) returns (SystemEventResponse);
}